# bsod-testpilot

./: .kateproject.notes  Cargo.toml  README.md  build.sh
.cargo/: config.toml
src/: main.rs
src/argument/: argparse.rs  mod.rs
src/behavior/: mod.rs  nterror.rs  traits.rs  trigger_bsod_havoc.rs
src/panic/: mod.rs  panic.rs
